src/main/antlr/.antlr/BaseParser.java
// Generated from /home/jd/Projects/CISC471/blc/src/main/antlr/Base.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BaseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACE=3, RBRACE=4, LBRACKET=5, RBRACKET=6, DOT=7, 
		COMMA=8, COLON=9, SEMICOLON=10, CONJ=11, DISJ=12, EQUAL=13, EQUAL_EQUAL=14, 
		BANG_EQUAL=15, BANG=16, PLUS=17, MINUS=18, STAR=19, SLASH=20, PERCENT=21, 
		ARROW=22, FUN=23, IF=24, ELSE=25, STRUCT=26, WHILE=27, RETURN=28, VAR=29, 
		LESS=30, LESS_EQUAL=31, GREATER=32, GREATER_EQUAL=33, TRUE=34, FALSE=35, 
		UNIT=36, IDENTIFIER=37, INT_LITERAL=38, STRING_LITERAL=39, DelimitedComment=40, 
		LineComment=41, WS=42;
	public static final int
		RULE_compilatonUnit = 0, RULE_declaration = 1, RULE_parameter = 2, RULE_field = 3, 
		RULE_stmt = 4, RULE_block = 5, RULE_expr = 6, RULE_typeExpression = 7, 
		RULE_reference = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilatonUnit", "declaration", "parameter", "field", "stmt", "block", 
			"expr", "typeExpression", "reference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", 
			"';'", "'&&'", "'||'", "'='", "'=='", "'!='", "'!'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'->'", "'fun'", "'if'", "'else'", "'struct'", "'while'", 
			"'return'", "'var'", "'<'", "'<='", "'>'", "'>='", "'true'", "'false'", 
			"'unit'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
			"DOT", "COMMA", "COLON", "SEMICOLON", "CONJ", "DISJ", "EQUAL", "EQUAL_EQUAL", 
			"BANG_EQUAL", "BANG", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "ARROW", 
			"FUN", "IF", "ELSE", "STRUCT", "WHILE", "RETURN", "VAR", "LESS", "LESS_EQUAL", 
			"GREATER", "GREATER_EQUAL", "TRUE", "FALSE", "UNIT", "IDENTIFIER", "INT_LITERAL", 
			"STRING_LITERAL", "DelimitedComment", "LineComment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Base.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BaseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilatonUnitContext extends ParserRuleContext {
		public DeclarationContext declaration;
		public List<DeclarationContext> declarations = new ArrayList<DeclarationContext>();
		public TerminalNode EOF() { return getToken(BaseParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public CompilatonUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilatonUnit; }
	}

	public final CompilatonUnitContext compilatonUnit() throws RecognitionException {
		CompilatonUnitContext _localctx = new CompilatonUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilatonUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACE) | (1L << LBRACKET) | (1L << BANG) | (1L << MINUS) | (1L << FUN) | (1L << IF) | (1L << STRUCT) | (1L << WHILE) | (1L << RETURN) | (1L << VAR) | (1L << TRUE) | (1L << FALSE) | (1L << UNIT) | (1L << IDENTIFIER) | (1L << INT_LITERAL) | (1L << STRING_LITERAL))) != 0)) {
				{
				{
				setState(18);
				((CompilatonUnitContext)_localctx).declaration = declaration();
				((CompilatonUnitContext)_localctx).declarations.add(((CompilatonUnitContext)_localctx).declaration);
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(24);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StructDeclarationContext extends DeclarationContext {
		public Token name;
		public FieldContext field;
		public List<FieldContext> fields = new ArrayList<FieldContext>();
		public TerminalNode STRUCT() { return getToken(BaseParser.STRUCT, 0); }
		public TerminalNode LBRACKET() { return getToken(BaseParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(BaseParser.RBRACKET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BaseParser.IDENTIFIER, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BaseParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BaseParser.COMMA, i);
		}
		public StructDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	public static class StatementAsDeclarationContext extends DeclarationContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StatementAsDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionDeclarationContext extends DeclarationContext {
		public Token name;
		public ParameterContext parameter;
		public List<ParameterContext> parameters = new ArrayList<ParameterContext>();
		public TypeExpressionContext returnType;
		public BlockContext body;
		public TerminalNode FUN() { return getToken(BaseParser.FUN, 0); }
		public TerminalNode LPAREN() { return getToken(BaseParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BaseParser.RPAREN, 0); }
		public TerminalNode ARROW() { return getToken(BaseParser.ARROW, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BaseParser.IDENTIFIER, 0); }
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BaseParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BaseParser.COMMA, i);
		}
		public FunctionDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	public static class VariableDeclarationContext extends DeclarationContext {
		public Token name;
		public TypeExpressionContext type;
		public ExprContext initializer;
		public TerminalNode VAR() { return getToken(BaseParser.VAR, 0); }
		public TerminalNode COLON() { return getToken(BaseParser.COLON, 0); }
		public TerminalNode EQUAL() { return getToken(BaseParser.EQUAL, 0); }
		public TerminalNode SEMICOLON() { return getToken(BaseParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BaseParser.IDENTIFIER, 0); }
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VariableDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			int _alt;
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				_localctx = new FunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				match(FUN);
				setState(27);
				((FunctionDeclarationContext)_localctx).name = match(IDENTIFIER);
				setState(28);
				match(LPAREN);
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(29);
					((FunctionDeclarationContext)_localctx).parameter = parameter();
					((FunctionDeclarationContext)_localctx).parameters.add(((FunctionDeclarationContext)_localctx).parameter);
					setState(34);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(30);
							match(COMMA);
							setState(31);
							((FunctionDeclarationContext)_localctx).parameter = parameter();
							((FunctionDeclarationContext)_localctx).parameters.add(((FunctionDeclarationContext)_localctx).parameter);
							}
							} 
						}
						setState(36);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(37);
						match(COMMA);
						}
					}

					}
				}

				setState(42);
				match(RPAREN);
				setState(43);
				match(ARROW);
				setState(44);
				((FunctionDeclarationContext)_localctx).returnType = typeExpression();
				setState(45);
				((FunctionDeclarationContext)_localctx).body = block();
				}
				break;
			case STRUCT:
				_localctx = new StructDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				match(STRUCT);
				setState(48);
				((StructDeclarationContext)_localctx).name = match(IDENTIFIER);
				setState(49);
				match(LBRACKET);
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(50);
					((StructDeclarationContext)_localctx).field = field();
					((StructDeclarationContext)_localctx).fields.add(((StructDeclarationContext)_localctx).field);
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(51);
							match(COMMA);
							setState(52);
							((StructDeclarationContext)_localctx).field = field();
							((StructDeclarationContext)_localctx).fields.add(((StructDeclarationContext)_localctx).field);
							}
							} 
						}
						setState(57);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(58);
						match(COMMA);
						}
					}

					}
				}

				setState(63);
				match(RBRACKET);
				}
				break;
			case VAR:
				_localctx = new VariableDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(VAR);
				setState(65);
				((VariableDeclarationContext)_localctx).name = match(IDENTIFIER);
				setState(66);
				match(COLON);
				setState(67);
				((VariableDeclarationContext)_localctx).type = typeExpression();
				setState(68);
				match(EQUAL);
				setState(69);
				((VariableDeclarationContext)_localctx).initializer = expr(0);
				setState(70);
				match(SEMICOLON);
				}
				break;
			case LPAREN:
			case LBRACE:
			case LBRACKET:
			case BANG:
			case MINUS:
			case IF:
			case WHILE:
			case RETURN:
			case TRUE:
			case FALSE:
			case UNIT:
			case IDENTIFIER:
			case INT_LITERAL:
			case STRING_LITERAL:
				_localctx = new StatementAsDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public Token name;
		public TypeExpressionContext type;
		public TerminalNode COLON() { return getToken(BaseParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BaseParser.IDENTIFIER, 0); }
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((ParameterContext)_localctx).name = match(IDENTIFIER);
			setState(76);
			match(COLON);
			setState(77);
			((ParameterContext)_localctx).type = typeExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public Token name;
		public TypeExpressionContext type;
		public TerminalNode COLON() { return getToken(BaseParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BaseParser.IDENTIFIER, 0); }
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((FieldContext)_localctx).name = match(IDENTIFIER);
			setState(80);
			match(COLON);
			setState(81);
			((FieldContext)_localctx).type = typeExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileStmtContext extends StmtContext {
		public ExprContext condition;
		public StmtContext body;
		public TerminalNode WHILE() { return getToken(BaseParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(BaseParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BaseParser.RPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public WhileStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class IfStmtContext extends StmtContext {
		public ExprContext condition;
		public StmtContext thenStatement;
		public StmtContext elseStatement;
		public TerminalNode IF() { return getToken(BaseParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(BaseParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(BaseParser.RPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(BaseParser.ELSE, 0); }
		public IfStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class BlockAsStatementContext extends StmtContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockAsStatementContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ExpressionStmtContext extends StmtContext {
		public ExprContext expression;
		public TerminalNode SEMICOLON() { return getToken(BaseParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStmtContext extends StmtContext {
		public ExprContext expression;
		public TerminalNode RETURN() { return getToken(BaseParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(BaseParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		int _la;
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACKET:
				_localctx = new BlockAsStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				block();
				}
				break;
			case LPAREN:
			case LBRACE:
			case BANG:
			case MINUS:
			case TRUE:
			case FALSE:
			case UNIT:
			case IDENTIFIER:
			case INT_LITERAL:
			case STRING_LITERAL:
				_localctx = new ExpressionStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				((ExpressionStmtContext)_localctx).expression = expr(0);
				setState(85);
				match(SEMICOLON);
				}
				break;
			case IF:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(IF);
				setState(88);
				match(LPAREN);
				setState(89);
				((IfStmtContext)_localctx).condition = expr(0);
				setState(90);
				match(RPAREN);
				setState(91);
				((IfStmtContext)_localctx).thenStatement = stmt();
				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(92);
					match(ELSE);
					setState(93);
					((IfStmtContext)_localctx).elseStatement = stmt();
					}
					break;
				}
				}
				break;
			case RETURN:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				match(RETURN);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACE) | (1L << BANG) | (1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << UNIT) | (1L << IDENTIFIER) | (1L << INT_LITERAL) | (1L << STRING_LITERAL))) != 0)) {
					{
					setState(97);
					((ReturnStmtContext)_localctx).expression = expr(0);
					}
				}

				setState(100);
				match(SEMICOLON);
				}
				break;
			case WHILE:
				_localctx = new WhileStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				match(WHILE);
				setState(102);
				match(LPAREN);
				setState(103);
				((WhileStmtContext)_localctx).condition = expr(0);
				setState(104);
				match(RPAREN);
				setState(105);
				((WhileStmtContext)_localctx).body = stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DeclarationContext declaration;
		public List<DeclarationContext> declarations = new ArrayList<DeclarationContext>();
		public TerminalNode LBRACKET() { return getToken(BaseParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(BaseParser.RBRACKET, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LBRACKET);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << LBRACE) | (1L << LBRACKET) | (1L << BANG) | (1L << MINUS) | (1L << FUN) | (1L << IF) | (1L << STRUCT) | (1L << WHILE) | (1L << RETURN) | (1L << VAR) | (1L << TRUE) | (1L << FALSE) | (1L << UNIT) | (1L << IDENTIFIER) | (1L << INT_LITERAL) | (1L << STRING_LITERAL))) != 0)) {
				{
				{
				setState(110);
				((BlockContext)_localctx).declaration = declaration();
				((BlockContext)_localctx).declarations.add(((BlockContext)_localctx).declaration);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
